xsl/html: remove explicit mode "p" for paragraphs

--- a/pyhwp-tests/hwp5_tests/fixtures/headerfooter.html.d/index.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/headerfooter.html.d/index.xhtml
@@ -14,4 +14,4 @@
         margin-right: 85.04pt;
     
         }
-    </style></head><body><div class="Section Section-0 Paper"><div class="Page"><p class="Normal parashape-1">&#13;</p><p class="Normal parashape-1"><span class="charshape-2">Header 이것은 머리말입니다</span><span class="charshape-2">.</span>&#13;<span class="charshape-2">Footer 이것은 꼬리말입니다.</span>&#13;&#13;</p></div></div></body></html>
+    </style></head><body><div class="Section Section-0 Paper"><div class="Page"><p class="Normal parashape-1">&#13;</p><p class="Normal parashape-1"><p class="Header parashape-11"><span class="charshape-2">Header 이것은 머리말입니다</span><span class="charshape-2">.</span>&#13;</p><p class="Header parashape-11"><span class="charshape-2">Footer 이것은 꼬리말입니다.</span>&#13;</p>&#13;</p></div></div></body></html>
