--- a/pyhwp-tests/hwp5_tests/fixtures/table.html.d/index.formatted.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/table.html.d/index.formatted.xhtml
@@ -23,7 +23,7 @@
   <body>
     <div class="Section Section-0 Paper">
       <div class="Page">
-        <p class="Normal parashape-1"><table cellspacing="0" class="borderfill-2" style="border-collapse:collapse;"><tr><td class="borderfill-2" colspan="1" rowspan="1" style="width:37.79pt; height:70.86pt;"><span class="charshape-1"/></td><td class="borderfill-2" colspan="1" rowspan="1" style="width:37.79pt; height:70.86pt;"><span class="charshape-1"/></td><td class="borderfill-2" colspan="1" rowspan="2" style="width:37.79pt; height:141.72pt;"><span class="charshape-1"/></td></tr><tr><td class="borderfill-2" colspan="2" rowspan="1" style="width:75.58pt; height:70.86pt;"><span class="charshape-1"/></td></tr></table>&#13;</p>
+        <p class="Normal parashape-1"><table cellspacing="0" class="borderfill-2" style="border-collapse:collapse;"><tr><td class="borderfill-2" colspan="1" rowspan="1" style="width:37.79pt; height:70.86pt;"><p class="Normal parashape-2"><span class="charshape-1"/></p></td><td class="borderfill-2" colspan="1" rowspan="1" style="width:37.79pt; height:70.86pt;"><p class="Normal parashape-2"><span class="charshape-1"/></p></td><td class="borderfill-2" colspan="1" rowspan="2" style="width:37.79pt; height:141.72pt;"><p class="Normal parashape-2"><span class="charshape-1"/></p></td></tr><tr><td class="borderfill-2" colspan="2" rowspan="1" style="width:75.58pt; height:70.86pt;"><p class="Normal parashape-2"><span class="charshape-1"/></p></td></tr></table>&#13;</p>
         <p class="Normal parashape-1">
           <span class="charshape-1"/>
         </p>
