--- a/pyhwp-tests/hwp5_tests/fixtures/textbox.html.d/index.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/textbox.html.d/index.xhtml
@@ -14,4 +14,4 @@
         margin-right: 85.04pt;
     
         }
-    </style></head><body><div class="Section Section-0 Paper"><div class="Page"><p class="Normal parashape-1"><div class="GShapeObject"><span class="charshape-1">그림 </span><span class="charshape-1"> 캡션</span>&#13;<span class="charshape-1">글상자</span>&#13;</div>&#13;</p></div></div></body></html>
+    </style></head><body><div class="Section Section-0 Paper"><div class="Page"><p class="Normal parashape-1"><div class="GShapeObject"><p class="Normal parashape-2"><span class="charshape-1">그림 </span><span class="charshape-1"> 캡션</span>&#13;</p><p class="Normal parashape-2"><span class="charshape-1">글상자</span>&#13;</p></div>&#13;</p></div></div></body></html>
