--- a/pyhwp-tests/hwp5_tests/fixtures/footnote-endnote.html.d/index.formatted.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/footnote-endnote.html.d/index.formatted.xhtml
@@ -23,8 +23,8 @@
   <body>
     <div class="Section Section-0 Paper">
       <div class="Page">
-        <p class="Normal parashape-11"><span class="charshape-1">각주참조</span><span class="charshape-4"> 각주입니다.</span>&#13;<span class="charshape-4"> 각주 두 번째입니다.</span>&#13;&#13;</p>
-        <p class="Normal parashape-11"><span class="charshape-1">미주참조</span><span class="charshape-1"> 미주입니다.</span>&#13;<span class="charshape-1"> 미주 두 번째입니다.</span>&#13;&#13;</p>
+        <p class="Normal parashape-11"><span class="charshape-1">각주참조</span><p class="Footnote parashape-10"><span class="charshape-4"> 각주입니다.</span>&#13;</p><p class="Footnote parashape-10"><span class="charshape-4"> 각주 두 번째입니다.</span>&#13;</p>&#13;</p>
+        <p class="Normal parashape-11"><span class="charshape-1">미주참조</span><p class="Normal parashape-0"><span class="charshape-1"> 미주입니다.</span>&#13;</p><p class="Normal parashape-0"><span class="charshape-1"> 미주 두 번째입니다.</span>&#13;</p>&#13;</p>
       </div>
     </div>
   </body>
