--- a/pyhwp-tests/hwp5_tests/fixtures/matrix.html.d/index.formatted.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/matrix.html.d/index.formatted.xhtml
@@ -23,7 +23,7 @@
   <body>
     <div class="Section Section-0 Paper">
       <div class="Page">
-        <p class="Normal parashape-1"><div class="GShapeObject"><span class="charshape-1"/></div><div class="GShapeObject"><span class="charshape-1"/></div><div class="GShapeObject"><span class="charshape-1"/></div>&#13;</p>
+        <p class="Normal parashape-1"><div class="GShapeObject"><p class="Normal parashape-2"><span class="charshape-1"/></p></div><div class="GShapeObject"><p class="Normal parashape-2"><span class="charshape-1"/></p></div><div class="GShapeObject"><p class="Normal parashape-2"><span class="charshape-1"/></p></div>&#13;</p>
       </div>
     </div>
   </body>
