--- a/pyhwp-tests/hwp5_tests/fixtures/shapecontainer-2.html.d/index.formatted.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/shapecontainer-2.html.d/index.formatted.xhtml
@@ -23,7 +23,7 @@
   <body>
     <div class="Section Section-0 Paper">
       <div class="Page">
-        <p class="Normal parashape-1"><div class="GShapeObject"><img src="bindata/BIN0001.jpg" style="width: 595.27pt; height: 36.84pt;"/><span class="charshape-5">목</span>&#13;<span class="charshape-5">차</span>&#13;</div>&#13;</p>
+        <p class="Normal parashape-1"><div class="GShapeObject"><img src="bindata/BIN0001.jpg" style="width: 595.27pt; height: 36.84pt;"/><p class="Normal parashape-12"><span class="charshape-5">목</span>&#13;</p><p class="Normal parashape-12"><span class="charshape-5">차</span>&#13;</p></div>&#13;</p>
       </div>
     </div>
   </body>
