--- a/pyhwp-tests/hwp5_tests/fixtures/shaperect.html.d/index.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/shaperect.html.d/index.xhtml
@@ -14,4 +14,4 @@
         margin-right: 85.04pt;
     
         }
-    </style></head><body><div class="Section Section-0 Paper"><div class="Page"><p class="Normal parashape-1"><div class="GShapeObject"></div><div class="GShapeObject"><span class="charshape-1">글 상자</span>&#13;</div><div class="GShapeObject"></div><div class="GShapeObject"></div>&#13;</p></div></div></body></html>
+    </style></head><body><div class="Section Section-0 Paper"><div class="Page"><p class="Normal parashape-1"><div class="GShapeObject"></div><div class="GShapeObject"><p class="Normal parashape-12"><span class="charshape-1">글 상자</span>&#13;</p></div><div class="GShapeObject"></div><div class="GShapeObject"></div>&#13;</p></div></div></body></html>
