binmodel: enhance CharShape underline
upperline -> overline
unknown -> line_through

--- a/pyhwp-tests/hwp5_tests/fixtures/charshape.html.d/index.formatted.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/charshape.html.d/index.formatted.xhtml
@@ -14,11 +14,13 @@
   </head>
   <body>
     <div class="Section Section-0">
-      <p class="Normal parashape-1"><span class="charshape-1">가</span>&#13;</p>
-      <p class="Normal parashape-1"><span class="charshape-6">기울임</span><span class="charshape-5">진하게</span>&#13;</p>
-      <p class="Normal parashape-1"><span class="charshape-0">밑줄없음</span><span class="charshape-7">밑줄</span><span class="charshape-9">가운데줄</span><span class="charshape-8">윗줄</span>&#13;</p>
+      <p class="Normal parashape-0"><span class="charshape-1">가</span>&#13;</p>
+      <p class="Normal parashape-0"><span class="charshape-6">기울임</span><span class="charshape-5">진하게</span>&#13;</p>
+      <p class="Normal parashape-0"><span class="charshape-0">밑줄없음</span><span class="charshape-7">밑줄</span><span class="charshape-9">가운데줄</span><span class="charshape-8">윗줄</span>&#13;</p>
       <p class="Normal parashape-2"><span class="charshape-1">글자크기:</span><span class="charshape-12"> 기준크기10pt</span><span class="charshape-11"> 한글90%</span><span class="charshape-13"> 영문80%</span><span class="charshape-14"> 기타70%</span>&#13;</p>
       <p class="Normal parashape-2"><span class="charshape-1">폰트:</span><span class="charshape-15"> 한글돋움</span><span class="charshape-10"> 영문CourierNew</span><span class="charshape-16"> 기타قLucidaSansUnicode</span>&#13;</p>
+      <p class="Normal parashape-2"><span class="charshape-17">붉은밑줄</span>&#13;</p>
+      <p class="Normal parashape-2"><span class="charshape-18">점선밑줄</span>&#13;</p>
     </div>
   </body>
 </html>
