--- a/pyhwp-tests/hwp5_tests/fixtures/issue144-fields-crossing-lineseg-boundary.html.d/index.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/issue144-fields-crossing-lineseg-boundary.html.d/index.xhtml
@@ -10,4 +10,4 @@
   margin-bottom: 42.52pt;
   margin-left: 85.04pt;
 }
-</style></head><body><div class="Section Section-0 Paper"><div class="Page"><p class="Normal parashape-11"><span class="charshape-6">google google google </span><span class="charshape-6">google google google</span>&#13;</p><p class="Normal parashape-11"><span class="charshape-5">gmail g</span><span class="charshape-6">mail gmail gmail </span><span class="charshape-6">gmail gmail</span>&#13;</p><p class="Normal parashape-11"><span class="charshape-6">gmai</span><span class="charshape-5">le</span>&#13;</p></div></div></body></html>
+</style></head><body><div class="Section Section-0 Paper"><div class="Page"><p class="Normal parashape-11">google google google google google google&#13;</p><p class="Normal parashape-11"><span class="charshape-5">gmail g</span>mail gmail gmail gmail gmail&#13;</p><p class="Normal parashape-11">gmai<span class="charshape-5">le</span>&#13;</p></div></div></body></html>
