--- a/pyhwp-tests/hwp5_tests/fixtures/linespacing.html.d/index.formatted.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/linespacing.html.d/index.formatted.xhtml
@@ -19,32 +19,32 @@
   <body>
     <div class="Section Section-0 Paper">
       <div class="Page">
-        <p class="Normal parashape-13"><span class="charshape-5">|HHHHHHHHHHHHHH</span>&#13;</p>
-        <p class="Normal parashape-13"><span class="charshape-5">|HHHHHHHHHHHHHH</span>&#13;</p>
-        <p class="Normal parashape-18"><span class="charshape-5">|H 글자에 따라 150%</span>&#13;</p>
-        <p class="Normal parashape-13"><span class="charshape-5">|HHHHHHHHHHHHHH</span>&#13;</p>
-        <p class="Normal parashape-19"><span class="charshape-5">|H 고정 값 15pt</span>&#13;</p>
-        <p class="Normal parashape-13"><span class="charshape-5">|HHHHHHHHHHHHHH</span>&#13;</p>
-        <p class="Normal parashape-20"><span class="charshape-5">|H 여백만 지정 5pt</span>&#13;</p>
-        <p class="Normal parashape-13"><span class="charshape-5">|HHHHHHHHHHHHHH</span>&#13;</p>
-        <p class="Normal parashape-12"><span class="charshape-5">|H 글자에 따라 100%</span>&#13;</p>
-        <p class="Normal parashape-13"><span class="charshape-5">|HHHHHHHHHHHHHH</span>&#13;</p>
-        <p class="Normal parashape-13"><span class="charshape-5">|H 고정 값 10pt</span>&#13;</p>
-        <p class="Normal parashape-13"><span class="charshape-5">|HHHHHHHHHHHHHH</span>&#13;</p>
-        <p class="Normal parashape-14"><span class="charshape-5">|H 여백만 지정 0pt</span>&#13;</p>
-        <p class="Normal parashape-13"><span class="charshape-5">|HHHHHHHHHHHHHH</span>&#13;</p>
-        <p class="Normal parashape-16"><span class="charshape-5">|H 글자에 따라 200%</span>&#13;</p>
-        <p class="Normal parashape-13"><span class="charshape-5">|HHHHHHHHHHHHHH</span>&#13;</p>
-        <p class="Normal parashape-15"><span class="charshape-5">|H 고정 값 20pt</span>&#13;</p>
-        <p class="Normal parashape-13"><span class="charshape-5">|HHHHHHHHHHHHHH</span>&#13;</p>
-        <p class="Normal parashape-17"><span class="charshape-5">|H 여백만 지정 10pt</span>&#13;</p>
-        <p class="Normal parashape-13"><span class="charshape-5">|HHHHHHHHHHHHHH</span>&#13;</p>
-        <p class="Normal parashape-12"><span class="charshape-5">|H 글자에 따라 </span><span class="charshape-6">100%</span>&#13;</p>
-        <p class="Normal parashape-13"><span class="charshape-5">|HHHHHHHHHHHHHH</span>&#13;</p>
-        <p class="Normal parashape-13"><span class="charshape-5">|H 고정 값 </span><span class="charshape-7">0pt</span>&#13;</p>
-        <p class="Normal parashape-13"><span class="charshape-5">|HHHHHHHHHHHHHH</span>&#13;</p>
-        <p class="Normal parashape-14"><span class="charshape-5">|H 여백만 지정 </span><span class="charshape-6">0pt</span>&#13;</p>
-        <p class="Normal parashape-13"><span class="charshape-5">|HHHHHHHHHHHHHH</span>&#13;</p>
+        <p class="Normal parashape-13"><span>|HHHHHHHHHHHHHH</span>&#13;</p>
+        <p class="Normal parashape-13"><span>|HHHHHHHHHHHHHH</span>&#13;</p>
+        <p class="Normal parashape-18"><span>|H 글자에 따라 150%</span>&#13;</p>
+        <p class="Normal parashape-13"><span>|HHHHHHHHHHHHHH</span>&#13;</p>
+        <p class="Normal parashape-19"><span>|H 고정 값 15pt</span>&#13;</p>
+        <p class="Normal parashape-13"><span>|HHHHHHHHHHHHHH</span>&#13;</p>
+        <p class="Normal parashape-20"><span>|H 여백만 지정 5pt</span>&#13;</p>
+        <p class="Normal parashape-13"><span>|HHHHHHHHHHHHHH</span>&#13;</p>
+        <p class="Normal parashape-12"><span>|H 글자에 따라 100%</span>&#13;</p>
+        <p class="Normal parashape-13"><span>|HHHHHHHHHHHHHH</span>&#13;</p>
+        <p class="Normal parashape-13"><span>|H 고정 값 10pt</span>&#13;</p>
+        <p class="Normal parashape-13"><span>|HHHHHHHHHHHHHH</span>&#13;</p>
+        <p class="Normal parashape-14"><span>|H 여백만 지정 0pt</span>&#13;</p>
+        <p class="Normal parashape-13"><span>|HHHHHHHHHHHHHH</span>&#13;</p>
+        <p class="Normal parashape-16"><span>|H 글자에 따라 200%</span>&#13;</p>
+        <p class="Normal parashape-13"><span>|HHHHHHHHHHHHHH</span>&#13;</p>
+        <p class="Normal parashape-15"><span>|H 고정 값 20pt</span>&#13;</p>
+        <p class="Normal parashape-13"><span>|HHHHHHHHHHHHHH</span>&#13;</p>
+        <p class="Normal parashape-17"><span>|H 여백만 지정 10pt</span>&#13;</p>
+        <p class="Normal parashape-13"><span>|HHHHHHHHHHHHHH</span>&#13;</p>
+        <p class="Normal parashape-12"><span>|H 글자에 따라 </span><span class="charshape-6">100%</span>&#13;</p>
+        <p class="Normal parashape-13"><span>|HHHHHHHHHHHHHH</span>&#13;</p>
+        <p class="Normal parashape-13"><span>|H 고정 값 </span><span class="charshape-7">0pt</span>&#13;</p>
+        <p class="Normal parashape-13"><span>|HHHHHHHHHHHHHH</span>&#13;</p>
+        <p class="Normal parashape-14"><span>|H 여백만 지정 </span><span class="charshape-6">0pt</span>&#13;</p>
+        <p class="Normal parashape-13"><span>|HHHHHHHHHHHHHH</span>&#13;</p>
       </div>
     </div>
   </body>
