--- a/pyhwp-tests/hwp5_tests/fixtures/matrix.html.d/index.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/matrix.html.d/index.xhtml
@@ -10,4 +10,4 @@
   margin-bottom: 42.52pt;
   margin-left: 85.04pt;
 }
-</style></head><body><div class="Section Section-0 Paper"><div class="Page"><p class="Normal parashape-1"><div class="GShapeObject"><p class="Normal parashape-2"><span class="charshape-1"></span></p></div><div class="GShapeObject"><p class="Normal parashape-2"><span class="charshape-1"></span></p></div><div class="GShapeObject"><p class="Normal parashape-2"><span class="charshape-1"></span></p></div>&#13;</p></div></div></body></html>
+</style></head><body><div class="Section Section-0 Paper"><div class="Page"><p class="Normal parashape-1"><div class="GShapeObject"><p class="Normal"><span></span></p></div><div class="GShapeObject"><p class="Normal"><span></span></p></div><div class="GShapeObject"><p class="Normal"><span></span></p></div>&#13;</p></div></div></body></html>
