--- a/pyhwp-tests/hwp5_tests/fixtures/pagedefs.html.d/index.formatted.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/pagedefs.html.d/index.formatted.xhtml
@@ -30,12 +30,12 @@
   <body>
     <div class="Section Section-0 Paper">
       <div class="Page">
-        <p class="Normal parashape-1"><span class="charshape-1">Section 1: A4 portrait</span>&#13;</p>
+        <p class="Normal parashape-1"><span>Section 1: A4 portrait</span>&#13;</p>
       </div>
     </div>
     <div class="Section Section-1 Paper">
       <div class="Page">
-        <p class="Normal parashape-1"><span class="charshape-1">Section 2: A4 landscape</span>&#13;</p>
+        <p class="Normal parashape-1"><span>Section 2: A4 landscape</span>&#13;</p>
       </div>
     </div>
   </body>
