--- a/pyhwp-tests/hwp5_tests/fixtures/parashape.html.d/index.formatted.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/parashape.html.d/index.formatted.xhtml
@@ -19,15 +19,15 @@
   <body>
     <div class="Section Section-0 Paper">
       <div class="Page">
-        <p class="Normal parashape-14"><span class="charshape-1">문단1</span>&#13;</p>
-        <p class="Normal parashape-2"><span class="charshape-1">문단2</span>&#13;</p>
-        <p class="Normal parashape-12"><span class="charshape-1">문단3 - 들여쓰기 10pt 들여쓰기 10pt 들여쓰기 10pt 들여쓰기 10pt 들여쓰기 10pt 들</span><span class="charshape-1">여쓰기 10pt 들여쓰기 10pt</span>&#13;</p>
-        <p class="Normal parashape-13"><span class="charshape-1">문단4 - 내어쓰기 10pt 내어쓰기 10pt 내어쓰기 10pt 내어쓰기 10pt 내어쓰기 10pt 내어</span><span class="charshape-1">쓰기 10pt 내어쓰기 10pt</span>&#13;</p>
-        <p class="Normal parashape-15"><span class="charshape-1">문단 5</span>&#13;</p>
-        <p class="Normal parashape-16"><span class="charshape-1">문단 6</span>&#13;</p>
-        <p class="Normal parashape-17"><span class="charshape-1">문단 7</span>&#13;</p>
-        <p class="Normal parashape-18"><span class="charshape-1">문단 8</span>&#13;</p>
-        <p class="Normal parashape-19"><span class="charshape-1">문단 9</span>&#13;</p>
+        <p class="Normal parashape-14"><span>문단1</span>&#13;</p>
+        <p class="Normal"><span>문단2</span>&#13;</p>
+        <p class="Normal parashape-12"><span>문단3 - 들여쓰기 10pt 들여쓰기 10pt 들여쓰기 10pt 들여쓰기 10pt 들여쓰기 10pt 들</span><span>여쓰기 10pt 들여쓰기 10pt</span>&#13;</p>
+        <p class="Normal parashape-13"><span>문단4 - 내어쓰기 10pt 내어쓰기 10pt 내어쓰기 10pt 내어쓰기 10pt 내어쓰기 10pt 내어</span><span>쓰기 10pt 내어쓰기 10pt</span>&#13;</p>
+        <p class="Normal parashape-15"><span>문단 5</span>&#13;</p>
+        <p class="Normal parashape-16"><span>문단 6</span>&#13;</p>
+        <p class="Normal parashape-17"><span>문단 7</span>&#13;</p>
+        <p class="Normal parashape-18"><span>문단 8</span>&#13;</p>
+        <p class="Normal parashape-19"><span>문단 9</span>&#13;</p>
       </div>
     </div>
   </body>
