--- a/pyhwp-tests/hwp5_tests/fixtures/shaperect.html.d/index.formatted.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/shaperect.html.d/index.formatted.xhtml
@@ -19,7 +19,7 @@
   <body>
     <div class="Section Section-0 Paper">
       <div class="Page">
-        <p class="Normal parashape-1"><div class="GShapeObject"/><div class="GShapeObject"><p class="Normal parashape-12"><span class="charshape-1">글 상자</span>&#13;</p></div><div class="GShapeObject"/><div class="GShapeObject"/>&#13;</p>
+        <p class="Normal parashape-1"><div class="GShapeObject"/><div class="GShapeObject"><p class="Normal parashape-12"><span>글 상자</span>&#13;</p></div><div class="GShapeObject"/><div class="GShapeObject"/>&#13;</p>
       </div>
     </div>
   </body>
