--- a/pyhwp-tests/hwp5_tests/fixtures/textbox.html.d/index.formatted.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/textbox.html.d/index.formatted.xhtml
@@ -19,7 +19,7 @@
   <body>
     <div class="Section Section-0 Paper">
       <div class="Page">
-        <p class="Normal parashape-1"><div class="GShapeObject"><p class="Normal parashape-2"><span class="charshape-1">그림 </span><span class="charshape-1"> 캡션</span>&#13;</p><p class="Normal parashape-2"><span class="charshape-1">글상자</span>&#13;</p></div>&#13;</p>
+        <p class="Normal parashape-1"><div class="GShapeObject"><p class="Normal"><span>그림 </span><span> 캡션</span>&#13;</p><p class="Normal"><span>글상자</span>&#13;</p></div>&#13;</p>
       </div>
     </div>
   </body>
