--- a/pyhwp-tests/hwp5_tests/fixtures/headerfooter.html.d/index.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/headerfooter.html.d/index.xhtml
@@ -10,4 +10,4 @@
   margin-bottom: 42.52pt;
   margin-left: 85.04pt;
 }
-</style></head><body><div class="Section Section-0 Paper"><div class="Page"><p class="Normal parashape-1">&#13;</p><p class="Normal parashape-1"><p class="Header parashape-11"><span class="charshape-2">Header 이것은 머리말입니다</span><span class="charshape-2">.</span>&#13;</p><p class="Header parashape-11"><span class="charshape-2">Footer 이것은 꼬리말입니다.</span>&#13;</p>&#13;</p></div></div></body></html>
+</style></head><body><div class="Section Section-0 Paper"><div class="Page"><p class="Normal parashape-1">&#13;</p><p class="Normal parashape-1"><p class="Header"><span>Header 이것은 머리말입니다</span><span>.</span>&#13;</p><p class="Header"><span>Footer 이것은 꼬리말입니다.</span>&#13;</p>&#13;</p></div></div></body></html>
