--- a/pyhwp-tests/hwp5_tests/fixtures/issue30.html.d/index.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/issue30.html.d/index.xhtml
@@ -10,4 +10,4 @@
   margin-bottom: 42.52pt;
   margin-left: 85.04pt;
 }
-</style></head><body><div class="Section Section-0 Paper"><div class="Page"><p class="Normal parashape-1"><span class="charshape-1">ODT 변환 시 원문에 없는 공백이 띄엄띄엄 나타남 ODT 변환 시 중간 중간에 공백 문자들</span><span class="charshape-1">이 들어가는 현상이 발생한다. 아마도 변환 과정에서 xmllint의 reindent 때문에 new line </span><span class="charshape-1">문자가 들어가는 것 같음.</span>&#13;</p></div></div></body></html>
+</style></head><body><div class="Section Section-0 Paper"><div class="Page"><p class="Normal parashape-1"><span>ODT 변환 시 원문에 없는 공백이 띄엄띄엄 나타남 ODT 변환 시 중간 중간에 공백 문자들</span><span>이 들어가는 현상이 발생한다. 아마도 변환 과정에서 xmllint의 reindent 때문에 new line </span><span>문자가 들어가는 것 같음.</span>&#13;</p></div></div></body></html>
