--- a/pyhwp-tests/hwp5_tests/fixtures/multicolumns-in-common-controls.html.d/index.formatted.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/multicolumns-in-common-controls.html.d/index.formatted.xhtml
@@ -19,8 +19,8 @@
   <body>
     <div class="Section Section-0 Paper">
       <div class="Page">
-        <p class="Normal parashape-11"><table cellspacing="0" class="borderfill-2" style="border-collapse:collapse;"><caption class="TableCaption" style="caption-side: bottom;"><p class="Normal parashape-0"><span class="charshape-1">표 </span><span class="charshape-1"> </span>&#13;</p></caption><tr><td class="borderfill-2" colspan="1" rowspan="1" style="width:419.54pt; height:2.82pt;"><p class="Normal parashape-12"><span class="charshape-1">다단 다단 다단 다단 다단 다단 다단 다단 </span><span class="charshape-1">다단 다단 다단 다단 다단 다단 다단 다단 </span>&#13;</p></td></tr></table>&#13;</p>
-        <p class="Normal parashape-11"><div class="GShapeObject"><p class="Normal parashape-0"><span class="charshape-1">그림 </span><span class="charshape-1"> </span>&#13;</p><p class="Normal parashape-12"><span class="charshape-1">다단 다단 다단 </span><span class="charshape-1">다단 다단 다단 </span><span class="charshape-1">다단 다단 다단 </span><span class="charshape-1">다단 다단 다단 </span><span class="charshape-1">다단 다단 다단 </span><span class="charshape-1">다단 다단 다단 </span><span class="charshape-1">다단 다단 다단 </span><span class="charshape-1">다단 다단 다단 </span>&#13;</p></div>&#13;</p>
+        <p class="Normal parashape-11"><table cellspacing="0" class="borderfill-2" style="border-collapse:collapse;"><caption class="TableCaption" style="caption-side: bottom;"><p class="Normal"><span>표 </span><span> </span>&#13;</p></caption><tr><td class="borderfill-2" colspan="1" rowspan="1" style="width:419.54pt; height:2.82pt;"><p class="Normal parashape-12"><span>다단 다단 다단 다단 다단 다단 다단 다단 </span><span>다단 다단 다단 다단 다단 다단 다단 다단 </span>&#13;</p></td></tr></table>&#13;</p>
+        <p class="Normal parashape-11"><div class="GShapeObject"><p class="Normal"><span>그림 </span><span> </span>&#13;</p><p class="Normal parashape-12"><span>다단 다단 다단 </span><span>다단 다단 다단 </span><span>다단 다단 다단 </span><span>다단 다단 다단 </span><span>다단 다단 다단 </span><span>다단 다단 다단 </span><span>다단 다단 다단 </span><span>다단 다단 다단 </span>&#13;</p></div>&#13;</p>
       </div>
     </div>
   </body>
