--- a/pyhwp-tests/hwp5_tests/fixtures/multicolumns-widths.html.d/index.formatted.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/multicolumns-widths.html.d/index.formatted.xhtml
@@ -19,9 +19,9 @@
   <body>
     <div class="Section Section-0 Paper">
       <div class="Page">
-        <p class="Normal parashape-11"><span class="charshape-1">1</span>&#13;</p>
-        <p class="Normal parashape-11"><span class="charshape-1">2</span>&#13;</p>
-        <p class="Normal parashape-11"><span class="charshape-1">3</span>&#13;</p>
+        <p class="Normal parashape-11"><span>1</span>&#13;</p>
+        <p class="Normal parashape-11"><span>2</span>&#13;</p>
+        <p class="Normal parashape-11"><span>3</span>&#13;</p>
       </div>
     </div>
   </body>
