--- a/pyhwp-tests/hwp5_tests/fixtures/multicolumns-widths.html.d/index.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/multicolumns-widths.html.d/index.xhtml
@@ -10,4 +10,4 @@
   margin-bottom: 42.52pt;
   margin-left: 85.04pt;
 }
-</style></head><body><div class="Section Section-0 Paper"><div class="Page"><p class="Normal parashape-11"><span class="charshape-1">1</span>&#13;</p><p class="Normal parashape-11"><span class="charshape-1">2</span>&#13;</p><p class="Normal parashape-11"><span class="charshape-1">3</span>&#13;</p></div></div></body></html>
+</style></head><body><div class="Section Section-0 Paper"><div class="Page"><p class="Normal parashape-11"><span>1</span>&#13;</p><p class="Normal parashape-11"><span>2</span>&#13;</p><p class="Normal parashape-11"><span>3</span>&#13;</p></div></div></body></html>
