--- a/pyhwp-tests/hwp5_tests/fixtures/paragraph-split-page.html.d/index.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/paragraph-split-page.html.d/index.xhtml
@@ -10,4 +10,4 @@
   margin-bottom: 42.52pt;
   margin-left: 85.04pt;
 }
-</style></head><body><div class="Section Section-0 Paper"><div class="Page"><p class="Normal parashape-2"><span class="charshape-1">가나다</span>&#13;</p><p class="Normal parashape-2"><span class="charshape-1">라마바</span>&#13;</p><p class="Normal parashape-2"><span class="charshape-1">new page</span>&#13;</p></div></div></body></html>
+</style></head><body><div class="Section Section-0 Paper"><div class="Page"><p class="Normal"><span>가나다</span>&#13;</p><p class="Normal"><span>라마바</span>&#13;</p><p class="Normal"><span>new page</span>&#13;</p></div></div></body></html>
