--- a/pyhwp-tests/hwp5_tests/fixtures/shaperect.html.d/index.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/shaperect.html.d/index.xhtml
@@ -10,4 +10,4 @@
   margin-bottom: 42.52pt;
   margin-left: 85.04pt;
 }
-</style></head><body><div class="Section Section-0 Paper"><div class="Page"><p class="Normal parashape-1"><div class="GShapeObject"></div><div class="GShapeObject"><p class="Normal parashape-12"><span class="charshape-1">글 상자</span>&#13;</p></div><div class="GShapeObject"></div><div class="GShapeObject"></div>&#13;</p></div></div></body></html>
+</style></head><body><div class="Section Section-0 Paper"><div class="Page"><p class="Normal parashape-1"><div class="GShapeObject"></div><div class="GShapeObject"><p class="Normal parashape-12"><span>글 상자</span>&#13;</p></div><div class="GShapeObject"></div><div class="GShapeObject"></div>&#13;</p></div></div></body></html>
