--- a/pyhwp-tests/hwp5_tests/fixtures/viewtext.html.d/index.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/viewtext.html.d/index.xhtml
@@ -10,4 +10,4 @@
   margin-bottom: 42.52pt;
   margin-left: 85.04pt;
 }
-</style></head><body><div class="Section Section-0 Paper"><div class="Page"><p class="Normal parashape-1"><span class="charshape-1">pyhwp 테스트를 위한 배포 문서 예제입니다.</span>&#13;</p></div></div></body></html>
+</style></head><body><div class="Section Section-0 Paper"><div class="Page"><p class="Normal parashape-1"><span>pyhwp 테스트를 위한 배포 문서 예제입니다.</span>&#13;</p></div></div></body></html>
